<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">音图精灵</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="could_not_open_album">无法打开相册</string>
    <string name="could_not_open_camera">无法打开相机</string>
    <string name="fail_photo_created">创建照片失败</string>
    <string name="no_sdcard">SD没有插入</string>
    <string name="choose_image_again">请重新选择图片</string>
    <string name="style">格调</string>
    <string name="black_white">黑白</string>
    <string name="nostalgia">怀旧</string>
    <string name="gray">老电影</string>
    <string name="gothic">歌德风</string>
    <string name="pink">粉红佳人</string>
    <string name="cold">冷艳</string>
    <string name="art">艺术</string>
    <string name="fashion">时尚</string>
    <string name="negative">底片</string>
    <string name="film">电影海报</string>
    <string name="rainbow">霓虹</string>
    <string name="inlay">镶嵌</string>
    <string name="mosaic">马赛克</string>
    <string name="erode">侵蚀</string>
    <string name="wind">风</string>
    <string name="shadow">阴影</string>
    <string name="exposure">曝光</string>
    <string name="comic">连环画</string>
    <string name="paper_cut">剪纸</string>
    <string name="sketch">素描</string>
    <string name="emboss">浮雕</string>
    <string name="oil_painting">油画</string>
    <string name="mist">雾化</string>
    <string name="gouache">水粉画</string>
    <string name="reflection">倒影</string>
    <string name="cross_processing">交叉冲印</string>
    <string name="ceramic">瓷砖块</string>
    <string name="blur">模糊</string>
    <string name="classic">经典</string>
    <string name="gaussian_blur">高斯模糊</string>
    <string name="soft_light">柔光</string>
    <string name="bright">亮光</string>
    <string name="vignette">晕影</string>
    <string name="dark_corner">暗角</string>
    <string name="sharpen">锐化</string>
    <string name="pen">钢笔画</string>
    <string name="symmetry">对称</string>
    <string name="magnifier">放大镜</string>
    <string name="distorting_mirror">哈哈镜</string>
    <string name="contrast_enhancement">对比度增强</string>
    <string name="smart_sharpen">智能锐化</string>
    <string name="lomo">LOMO</string>
    <string name="contrast_enhancement2">对比度增强2</string>
    <string name="effects">特效</string>
    <string name="sudoku">九宫格</string>
    <string name="bubble">泡泡</string>
    <string name="frame">相框</string>
    <string name="white_balance">白平衡</string>
    <string name="water_ripple">涟漪</string>
    <string name="marble">大理石花纹</string>
    <string name="dermabrasion">磨皮</string>
    <string name="whitening">美白</string>
    <string name="water">水纹</string>
    <string name="gamma_correction">伽马校正</string>
    <string name="motion_blur">移动模糊</string>
    <string name="laser">光束</string>
    <string name="focus">聚焦</string>
    <string name="glass">玻璃</string>
    <string name="chinese">华语</string>
    <string name="western">欧美</string>
    <string name="eighty">八零</string>
    <string name="ninty">九零</string>
    <string name="cantonese">粤语</string>
    <string name="light_music">轻音乐</string>
    <string name="new_music">新歌</string>
    <string name="rock">摇滚</string>
    <string name="fresh">小清新</string>
    <string name="cartoon">动漫</string>
    <string name="operation_error">操作有误</string>
    <string name="image_return">查看原图</string>
    <string name="image_save">保存当前图片</string>
    <string name="share">分享到朋友圈</string>
    <string name="filename_inform">请输入文件名</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="errcode_success">分享成功</string>
    <string name="errcode_cancel">您已取消分享</string>
    <string name="errcode_deny">分享被拒绝</string>
    <string name="errcode_unknown">未知错误</string>
    <string name="version_too_low">当前的微信版本过低</string>
    <string name="wxapp_uninstall">没有安装微信，无法分享</string>
    <string name="i_am_listening">我正在使用音图精灵收听我的最爱：</string>
    <string name="copyright">Copyright © 2014 William Deng All rights reserved.</string>
    <string name="preparing">正在努力为您准备音乐，请稍等......</string>
    <string name="smear">涂抹</string>
    <string name="cast">熔铸</string>
    <string name="freeze">冰冻</string>
    <string name="feather">羽化</string>
    <string name="frosted_glass">毛玻璃</string>
    <string name="processing">正在处理中，请稍等</string>
    <string name="album">相册</string>
    <string name="camera">相机</string>
    <string name="music">音乐</string>
    <string name="about">关于</string>

</resources>
