<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.app.img_mic_helper.MainActivity" 
    android:background="@drawable/main_bg">

    <LinearLayout
        android:id="@+id/mediate_linearlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">
        
        <LinearLayout
            android:id="@+id/main_firstlayer"
       		android:layout_width="wrap_content"
       		android:layout_height="wrap_content">
       		
            
            <LinearLayout 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                
                <Button 
                	style="?android:attr/buttonBarButtonStyle"
               	 	android:id="@+id/from_album"
                	android:layout_width="100dp"
                	android:layout_height="100dp"
                	android:background="@drawable/album"/>
                
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/snow"
                    android:layout_gravity="center"
                    android:textSize="25sp"
                    android:text="@string/album"/>
                
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:orientation="vertical">
                
                <Button 
                	style="?android:attr/buttonBarButtonStyle"
                	android:id="@+id/from_camera"
                	android:layout_width="100dp"
                	android:layout_height="100dp"
					android:background="@drawable/camera"/>
                
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/snow"
                    android:layout_gravity="center"
                    android:textSize="25sp"
                    android:text="@string/camera"/>
                
            </LinearLayout>
            
            
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/main_secondlayer"
       		android:layout_width="wrap_content"
       		android:layout_height="wrap_content"
       		android:layout_marginTop="50dp">
            
            
            <LinearLayout 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">              
                
                <Button 
                	style="?android:attr/buttonBarButtonStyle"
                	android:id="@+id/to_music"
                	android:layout_width="100dp"
                	android:layout_height="100dp"
                	android:background="@drawable/music"/>
                
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/snow"
                    android:layout_gravity="center"
                    android:textSize="25sp"
                    android:text="@string/music"/>
                
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:orientation="vertical">
                
                <Button 
                	style="?android:attr/buttonBarButtonStyle"
                	android:id="@+id/about"
                	android:layout_width="100dp"
                	android:layout_height="100dp"
                	android:background="@drawable/about"/>
                
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/snow"
                    android:layout_gravity="center"
                    android:textSize="25sp"
                    android:text="@string/about"/>
                
            </LinearLayout>
            
            
        </LinearLayout>
        
    </LinearLayout>

</RelativeLayout>
